--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-Copyright (C) 2005-2024 Joël Krähemann
+Copyright (C) 2005-2025 Joël Krähemann
 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.3
@@ -7,6 +7,18 @@ with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
 A copy of the license is included in the section entitled "GNU
 Free Documentation License".
 
+* implemented AgsButton
+* TODO:JK: implemented AgsToggleButton
+* TODO:JK: implemented AgsCheckButton
+* TODO:JK: implemented AgsRadioButton
+* TODO:JK: implemented AgsSpinButton
+* TODO:JK: implemented AgsMenuButton
+* TODO:JK: implemented AgsComboBox
+* TODO:JK: implemented AgsListView
+* TODO:JK: implemented AgsEntry
+* TODO:JK: implemented AgsTextView
+* TODO:JK: implemented AgsScale
+* TODO:JK: improved AgsFileEntry
 * TODO:JK: refactor AgsSimpleFile
 * TODO:JK: refactor AgsRecallContainer
 * TODO:JK: refactored AgsSimpleFile improved reading XML
