--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,15 @@
 ags (8.0.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* breaking ABI of ags_midi_ump_util_put_midi2_control_change() because of missing data field
+	* breaking ABI of ags_midi_ump_util_get_midi2_control_change() because of missing data field
 	* implemented MIDI v2.0 CC support within UI
 	* implemented AgsMidiCCDialog
 	* implemented AgsMidiCCEditor
 	* implemented AgsAudioTreeDispatcher
 	* fixed ags_recall.h MIDI 1 and 2 CC macros and enum
+	* improved ags_recall_midi1_control_change() completed missing functionality
+	* improved ags_recall_midi2_control_change() completed missing functionality
 	* improved AgsDial small refactoring
 	* improved AgsHybridSynth label text enumerating starting from 1
 	* improved AgsQuantumSynth label text enumerating starting from 1
