--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+ags (8.0.4)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags-fx-star-synth dedicated pitch buffer
+	* fixed ags-fx-seq-synth dedicated pitch buffer
+	* fixed ags-fx-raven-synth dedicated pitch buffer
+
 ags (8.0.3)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
