fixed ags_thread_add_start_queue() and related

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+ags (8.0.5)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed pad playback with new dispatcher
+	* fixed notation clipboard
+	* fixed raven synth seq LFO callback
+
+ags (8.0.4)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags-fx-star-synth dedicated pitch buffer
+	* fixed ags-fx-seq-synth dedicated pitch buffer
+	* fixed ags-fx-raven-synth dedicated pitch buffer
+
 ags (8.0.3)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
