--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (8.0.13)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed frame clock of animation window
+
 ags (8.0.12)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
