implemented automation port restore from XML

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 ags (8.1.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* implemented automation port restore from XML
 	* improved AgsAudioLoop
 
 ags (8.0.14)
