--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ ags (8.1.0)
 	* improved AgsAudioLoop
 	* improved AgsDial accessibility
 	* improved AgsIndicator accessibility
+	* TODO:JK: improved ags-fx-lv2 output and input size
 	* reverted some changes related to clipping in ags_notation_edit_draw_note()
 
 ags (8.0.14)
