--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+ags (8.1.2)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* TODO:JK: implemented ags-fx-audio-unit
+	* TODO:JK: implemented AgsAudioUnitManager
+	* TODO:JK: implemented AgsAudioUnitPlugin
+	* implemented AgsAudioUnitConversion
+	* added Audio Unit menu to application window
+	* added live Audio Unit menu to application window
+
 ags (8.1.1)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
