added AgsAudioUnitBridge and AgsLiveAudioUnitBridge prototypes

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,9 +2,13 @@ ags (8.1.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* TODO:JK: implemented ags-fx-audio-unit
-	* TODO:JK: implemented AgsAudioUnitManager
+	* implemented AgsAudioUnitManager
+	* implemented AgsAudioUnitNewQueueManager
 	* TODO:JK: implemented AgsAudioUnitPlugin
+	* implemented AgsAudioUnitNewQueue
 	* implemented AgsAudioUnitConversion
+	* TODO:JK: implemented AgsAudioUnitBridge
+	* TODO:JK: implemented AgsLiveAudioUnitBridge
 	* added Audio Unit menu to application window
 	* added live Audio Unit menu to application window
 
