--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,7 @@ ags (8.1.2)
 	* implemented AgsAudioUnitNewQueue
 	* implemented AgsAudioUnitConversion
 	* TODO:JK: implemented AgsAudioUnitBridge
-	* TODO:JK: implemented ags-fx-audio-unit
+	* implemented ags-fx-audio-unit
 	* added Audio Unit menu to application window
 	* added live Audio Unit menu to application window
 
