--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+ags (8.1.5)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags_effect_bulk_find_port()
+	* fixed ags_fx_audio_unit_audio_load_port()
+	* fixed ags_fx_audio_unit_audio_port_safe_write_callback()
+
 ags (8.1.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
