--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (8.1.10)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* renamed com.gsequencer.AudioUnitTest to AudioUnitTest
+
 ags (8.1.9)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
