--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (8.1.11)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* renamed AudioUnitTest to com.gsequencer.GSequencer.AudioUnitTest
+
 ags (8.1.10)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
