--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (8.1.15)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved audio unit test
+
 ags (8.1.14)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
