--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (8.1.17)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved audio unit test use posix_spawn()
+
 ags (8.1.16)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
