--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (8.1.19)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed audio unit test
+
 ags (8.1.18)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
