--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (8.1.21)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed audio unit test waitpid() return value and exit status
+
 ags (8.1.20)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
