--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (8.1.23)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* reverted implied config value super threaded scope channel on macOS
+
 ags (8.1.22)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
