--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (8.1.24)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* new micro release for macOS
+
 ags (8.1.23)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
