--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 ags (8.2.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* TODO:JK: implemented AgsModularSynth
+	* TODO:JK: implemented ags_modular_synth_util.[ch]
 	* implemented AgsImportNotationSMFPopover
 
 ags (8.1.25)
