--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@ ags (8.2.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* TODO:JK: implemented AgsModularSynth
-	* TODO:JK: implemented ags_modular_synth_util.[ch]
+	* implemented ags_modular_synth_util.[ch]
 	* TODO:JK: implemented ags-fx-modular-synth
 	* implemented AgsImportNotationSMFPopover
 
