--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (8.2.6)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed automation edit draw overflow
+
 ags (8.2.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
