--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (8.2.8)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags-fx-playback record format
+
 ags (8.2.7)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
