--- a/README
+++ b/README
@@ -68,10 +68,9 @@ libags-gui is a standalone library providing additional Gtk+-4.0 widgets.
 
 GSequencer is the main application providing a Gtk+-4.0 GUI. Allowing you to
 edit or record notation. It is designed to be accessible you should be able to
-$control the entire application by keyboard. Likewise it implements various
-Atk interfaces. The frontend to AGS requires to add machines by menubar and
-link them appropriately with properties dialog. It is available of the context
-menu. Note you can't create any loops within the tree.
+control the entire application by keyboard. The frontend to AGS requires to add
+machines by menubar and link them appropriately with properties dialog. It is
+available of the context menu. Note you can't create any loops within the tree.
 
 Build using mingw
 ====
