--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (8.2.9)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* implemented array type presets
+	* improved user manual
+
 ags (8.2.8)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
