--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (8.2.12)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved modular synth util check division by zero
+
 ags (8.2.11)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
