--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ ags (8.2.12)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* improved modular synth util check division by zero
+	* improved modular synth env-0 and env-1 frequency lower
+	* improved modular synth noise frequency default
 
 ags (8.2.11)
 
