improved Core Audio configuration reset device

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 ags (8.3.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* TODO:JK: improved Core Audio configuration
+	* improved Core Audio configuration
 	* TODO:JK: refactor VST3 support
 
 ags (8.2.12)
