improved Core Audio soundcard editor

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,7 @@ ags (8.3.0)
 	* improved ags_pitch_4x_alias_util.c check division by 0.0
 	* improved ags_pitch_16x_alias_util.c check division by 0.0
 	* added css-name of widgets for ags/widget/*
-	* added user's handbook content, missing new synths
+	* added user's handbook content, missing new synths and screenshots
 
 ags (8.2.12)
 
