--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 ags (8.3.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags_audio_stop() with sound_scope -1
+	* fixed functional server test
+	* fixed functional osc server test
+	* fixed functional osc xmlrpc server test
+	* improved unit-tests.mk to compile on macOS
+	* improved functional-tests.mk to compile on macOS
 	* extended functional test machine add and destroy added Stargazer, Quantum, Raven and Modular synth
 
 ags (8.3.3)
