--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (8.3.5)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed all ags_soundcard_get_note_256th_attack_position() implementations
+	* fixed osc buffer util 0 pad
+
 ags (8.3.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
