--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 ags (8.3.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed AgsLineMember::disconnect() signal detail
 	* fixed all ags_soundcard_get_note_256th_attack_position() implementations
 	* fixed osc buffer util 0 pad
 
