--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (8.3.6)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved apply presets to AgsCoreAudioPort
+
 ags (8.3.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
