--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (8.3.8)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags_import_notation_smf_popover_parse()
+	* added modular synth util and ags-fx-modular-synth to API reference manual
+
 ags (8.3.7)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
